--- a/v02c-javascript.html
+++ b/v02c-javascript.html
@@ -254,7 +254,7 @@
                                     sollte man ihn möglichst in den head schreiben. Hier ist es nicht nötig. Es folgt
                                     ein erstes Beispiel zur Verwendung des Tags innerhalb eines HTML-Dokuments:
                                     <figure id="c2.1">
-                                        <img src="v02c-data/2.1.PNG" alt="Codebeispiel 2.1" width="40%" />
+                                        <img src="v02c-data/2.1.png" alt="Codebeispiel 2.1" width="40%" />
                                         <figcaption>Codebsp. 2.1: JavaScript im script Tag</figcaption>
                                     </figure>
                                     Hier wurde der beispielhafte JavaScript-Code direkt in den HTML-body eingebaut, es
@@ -274,7 +274,7 @@
                                     Codebeispiel gezeigt, wobei zur Einfachheit der restliche HTML-Code weggelassen
                                     wird. Dieser ist der gleiche Code wie in Codebeispiel 2.1.
                                     <figure id="c2.1">
-                                        <img src="v02c-data/2.3.PNG" alt="Codebeispiel 2.3" width="45%" />
+                                        <img src="v02c-data/2.3.png" alt="Codebeispiel 2.3" width="45%" />
                                         <figcaption>Codebsp. 2.3: Einbinden der externen JavaScript-Datei</figcaption>
                                     </figure>
                                     Wie im Beispiel gezeigt ist, wird die erstellte JavaScript-Datei innerhalb des
@@ -294,7 +294,7 @@
                                     folgenden Beispiel, bei dem der Code in einen HTML-Link verpackt wird. Er wird
                                     ausgeführt sobald der Benutzer auf den Link klickt.
                                     <figure id="c2.4">
-                                        <img src="v02c-data/2.4.PNG" alt="Codebeispiel 2.4" width="70%" />
+                                        <img src="v02c-data/2.4.png" alt="Codebeispiel 2.4" width="70%" />
                                         <figcaption>Codebsp. 2.4: Verwendung eines JavaScript-Links</figcaption>
                                     </figure>
                                     Wie im Beispiel zu sehen ist, verweist die URL im HTML-Element Anchor auf einen Link
@@ -311,7 +311,7 @@
                                     enthalten können. Dieser wird dann bei bestimmten Ereignissen (engl.: „events“)
                                     ausgeführt. Im folgenden Beispiel wird dies anhand eines einfachen Buttons gezeigt.
                                     <figure id="c2.1">
-                                        <img src="v02c-data/2.5.PNG" alt="Codebeispiel 2.5" width="80%" />
+                                        <img src="v02c-data/2.5.png" alt="Codebeispiel 2.5" width="80%" />
                                         <figcaption>Codebsp. 2.5 Button mit JavaScript Event-Handler</figcaption>
                                     </figure>
                                     Es wird ein Button erstellt und der Event-Handler definiert, indem festgelegt wird,
@@ -421,7 +421,7 @@
                                 zur Verfügung. Es folgen einige Beispiele zur Veranschaulichung dieser Möglichkeiten.
                             </p>
                             <figure id="c3.1">
-                                <img src="v02c-data/3.1.PNG" alt="Codebeispiel 3.1" width="60%" />
+                                <img src="v02c-data/3.1.png" alt="Codebeispiel 3.1" width="60%" />
                                 <figcaption>Codebsp. 3.1: Variablenerzeugung mit Literalen</figcaption>
                             </figure>
                             <p>In Codebeispiel 3.1 wird gezeigt, wie nacheinander jeweils eine Variable des Typs Number,
@@ -592,7 +592,7 @@
                                 ausgegeben.
                             </p>
                             <figure id="c4.1">
-                                <img src="v02c-data/4.1.PNG" alt="Codebeispiel 4.1" width="25%" />
+                                <img src="v02c-data/4.1.png" alt="Codebeispiel 4.1" width="25%" />
                                 <figcaption>Codebsp. 4.1: if-Verzweigung</figcaption>
                             </figure>
                             <p>
@@ -615,7 +615,7 @@
                                 Code ausgeführt.
                             </p>
                             <figure id="c4.2">
-                                <img src="v02c-data/4.2.PNG" alt="Codebeispiel 4.2" width="30%" />
+                                <img src="v02c-data/4.2.png" alt="Codebeispiel 4.2" width="30%" />
                                 <figcaption>Codebsp. 4.2: case-Anweisung</figcaption>
                             </figure>
                             <p>
@@ -641,7 +641,7 @@
                                 Ansonsten erhält man eine Endlosschleife, da die Bedingung immer wahr ist.
                             </p>
                             <figure id="c4.3">
-                                <img src="v02c-data/4.3.PNG" alt="Codebeispiel 4.3" width="30%" />
+                                <img src="v02c-data/4.3.png" alt="Codebeispiel 4.3" width="30%" />
                                 <figcaption>Codebsp. 4.3: do...while-Schleife</figcaption>
                             </figure>
                             <p>
@@ -661,7 +661,7 @@
                                 letzten Klausel wird sie für die nächste Überprüfung verändert.
                             </p>
                             <figure id="c4.4">
-                                <img src="v02c-data/4.4.PNG" alt="Codebeispiel 4.4" width="40%" />
+                                <img src="v02c-data/4.4.png" alt="Codebeispiel 4.4" width="40%" />
                                 <figcaption>Codebsp. 4.4: for-Schleife</figcaption>
                             </figure>
                             <p>
@@ -685,7 +685,7 @@
                                 Beispiel des Arrays anhand des Indexes, durchlaufen.
                             </p>
                             <figure id="c4.5">
-                                <img src="v02c-data/4.5.PNG" alt="Codebeispiel 4.5" width="25%" />
+                                <img src="v02c-data/4.5.png" alt="Codebeispiel 4.5" width="25%" />
                                 <figcaption>Codebsp. 4.5: for...of-Schleife</figcaption>
                             </figure>
                             <p>
