--- a/impressum.html
+++ b/impressum.html
@@ -10,7 +10,6 @@
 
 
 <body>
-
 	<div class="header">
 		<div>
 			<p>Gruppe A-5</p>
@@ -18,6 +17,20 @@
 			<img src="hsmaschriftzug.png" alt="Hochschule Mannheim" class="schriftzug">
 		</div>
 	</div>
+
+	<nav>
+		<ul class="navigation">
+			<li><a href="mainpage.html">Start</a></li>
+			<li><a href="andereseite.html">Server & Client</a></li>
+			<li><a href="">HTML</a></li>
+			<li><a href="v02b-css.html">CSS</a></li>
+			<li><a href="v02c-javascript.html">JavaScript</a></li>
+			<li><a href="">JSP's/Servlets/JaxB </a></li>
+			<li><a href="">PHP</a></li>
+			<li><a href="">NodeJS</a></li>
+		</ul>
+	</nav>
+
 	<div class="content-container">
 		<div class="content-left"></div>
 		<div class="content-center">
