--- a/mainpage.html
+++ b/mainpage.html
@@ -32,85 +32,44 @@
         </nav>
 
         <div class="content-container">
-            <div class="content-left">
-                <nav class="contentnav">
-                    <ul>
-                        <li><a href="#abs1">Abschnitt 1</a></li>
-                        <li><a href="#abs2">Abschnitt 2</a></li>
-                        <li><a href="#abs3">Abschnitt 3</a></li>
-                        <li><a href="#abs4">Abschnitt 4</a></li>
-                        <li><a href="#abs5">Abschnitt 5</a></li>
-                        <li><a href="#abs6">Abschnitt 6</a></li>
-                        <li><a href="#abs7">Abschnitt 7</a></li>
-                        <li><a href="#abs8">Abschnitt 8</a></li>
-                        <li><a href="#abs9">Abschnitt 9</a></li>
-                    </ul>
-                </nav>
-            </div>
-
+            <div class="content-left"></div>
             <div class="content-center">
+                <h1>Themenübersicht</h1>
+                <hr>
+                <br>
                 <div class="center-paragraph">
-                    <h4 id="abs1" class="hider"><i class="pfeil-d"></i>Abschnitt 1</h4>
-                    <p> 1 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs1" class="hider"><i class="pfeil-d"></i>Server & Client</h4>
+                    <p>...</p>
                 </div>
                 <div class="center-paragraph">
-                    <h4 id="abs2" class="hider"><i class="pfeil-d"></i>Abschnitt 2</h4>
-                    <p>2 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs2" class="hider"><i class="pfeil-d"></i>HTML</h4>
+                    <p>...</p>
                 </div>
                 <div class="center-paragraph">
-                    <h4 id="abs3" class="hider"><i class="pfeil-d"></i>Abschnitt 3</h4>
-                    <p>3 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs3" class="hider"><i class="pfeil-d"></i>CSS</h4>
+                    <div class="thema">
+                        <p><img id="css-logo" class="start-logo" src="v02b-data/css3-logo.png" alt="CSS3 Logo" width="15%" />CSS3 wird benutzt um HTML-Dokumente zu stylen. Dieses Skript soll Ihnen die Grundlagen der Benutzung von CSS3 beibringen. Die Abkürzung
+                            CSS steht für Cascading Style Sheets, damit steckt der wichtigste Teil von CSS, die Kaskadierung schon im Namen.</p>
+                    </div>
                 </div>
                 <div class="center-paragraph">
-                    <h4 id="abs4" class="hider"><i class="pfeil-d"></i>Abschnitt 4</h4>
-                    <p>4 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs4" class="hider"><i class="pfeil-d"></i>JavaScript</h4>
+                    <div class="thema">
+                        <p><img id="js-logo" class="start-logo" src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="15%" /> JavaScript ist für die Entwicklung dynamischer Webseiten unerlässlich. Es ergänzt dabei andere Sprachen wie HTML und
+                            CSS. Dieses Skript soll ein Grundverständnis für die Sprache schaffen.</p>
+                    </div>
                 </div>
                 <div class="center-paragraph">
-                    <h4 id="abs5" class="hider"><i class="pfeil-d"></i>Abschnitt 5</h4>
-                    <p>5 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-                        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs5" class="hider"><i class="pfeil-d"></i>JSP's/Servlets/JaxB</h4>
+                    <p>...</p>
                 </div>
                 <div class="center-paragraph">
-                    <h4 id="abs6" class="hider"><i class="pfeil-d"></i>Abschnitt 6</h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs6" class="hider"><i class="pfeil-d"></i>PHP</h4>
+                    <p>...</p>
                 </div>
                 <div class="center-paragraph">
-                    <h4 id="abs7" class="hider"><i class="pfeil-d"></i>Abschnitt 7</h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-                </div>
-                <div class="center-paragraph">
-                    <h4 id="abs8" class="hider"><i class="pfeil-d"></i>Abschnitt 8</h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-                </div>
-                <div class="center-paragraph">
-                    <h4 id="abs9" class="hider"><i class="pfeil-d"></i>Abschnitt 9</h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                        accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                    <h4 id="abs7" class="hider"><i class="pfeil-d"></i>NodeJS</h4>
+                    <p>...</p>
                 </div>
             </div>
             <div class="content-right">
