--- a/datenschutz.html
+++ b/datenschutz.html
@@ -39,23 +39,19 @@
 			<p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO),
 				ist:</p>
 			<p>Gregor Haase</p>
+			<h2>Erhobene personenbezogene Daten</h2>
+			Wir erheben und speichern folgende personenbezogene Daten:
+			<ul>
+				<li>Ihre IP Adresse</li>
+			</ul>
 			<h2>Ihre Betroffenenrechte</h2>
 			<p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende Rechte
 				ausüben:</p>
 			<ul>
 				<li>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</li>
-				<li>Berichtigung unrichtiger personenbezogener Daten (Art. 16 DSGVO),</li>
 				<li>Löschung Ihrer bei uns gespeicherten Daten (Art. 17 DSGVO),</li>
-				<li>Einschränkung der Datenverarbeitung, sofern wir Ihre Daten aufgrund gesetzlicher Pflichten noch
-					nicht
-					löschen dürfen (Art. 18 DSGVO),</li>
-				<li>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO) und</li>
-				<li>Datenübertragbarkeit, sofern Sie in die Datenverarbeitung eingewilligt haben oder einen Vertrag mit
-					uns
-					abgeschlossen haben (Art. 20 DSGVO).</li>
+				<li>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO)</li>
 			</ul>
-			<p>Sofern Sie uns eine Einwilligung erteilt haben, können Sie diese jederzeit mit Wirkung für die Zukunft
-				widerrufen.</p>
 			<p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige
 				Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle
 				zuständige
