--- a/datenschutz.html
+++ b/datenschutz.html
@@ -45,7 +45,7 @@
 				<li>Ihre IP Adresse</li>
 			</ul>
 			<h2>Ihre Betroffenenrechte</h2>
-			<p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende Rechte
+			<p>Unter den angegebenen Kontaktdaten unseres Datenschutzverantwortlichen können Sie jederzeit folgende Rechte
 				ausüben:</p>
 			<ul>
 				<li>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</li>
