Bilder links gefixt

--- a/v02a-html.html
+++ b/v02a-html.html
@@ -371,7 +371,7 @@
                                         eines HTML-Dokuments welches dem Standard des W3C entspricht. <br>
                                         Dieses wird folgendermaßen notiert: <br>
                                         <figure>
-                                            <img src="./v02a-data/abb_2.1.png" alt="Bild konnte nicht geladen werden"
+                                            <img src="./v02a-data/abb_2.1.PNG" alt="Bild konnte nicht geladen werden"
                                                 style="border:2px solid black">
                                             <figcaption>Abbildung 2.1 - Das HTML Grundgerüst</figcaption>
                                         </figure>
@@ -425,7 +425,7 @@
                                         Als Beispiel finden Sie hier einen HTML-Quellcode und dessen Darstellung in
                                         einem Browser:
                                         <figure>
-                                            <img src="./v02a-data/abb_2.2.png" alt="Bild konnte nicht geladen werden"
+                                            <img src="./v02a-data/abb_2.2.PNG" alt="Bild konnte nicht geladen werden"
                                                 width="650" style="border:2px solid black">
                                             <figcaption>Abbildung 2.2 – Eine beispielshafte Textstrukturierung
                                             </figcaption>
@@ -462,7 +462,7 @@
                                         Hier ein Beispiel einer ungeordneten Liste mit <i
                                             class="ilcode">style</i>-Attribut, und ihre Darstellung: <br>
                                         <figure>
-                                            <img src="./v02a-data/abb_2.3.png" alt="Bild konnte nicht geladen werden"
+                                            <img src="./v02a-data/abb_2.3.PNG" alt="Bild konnte nicht geladen werden"
                                                 width="650" style="border:2px solid black">
                                             <figcaption>Abbildung 2.3 – Eine ungeordnete Liste mit style-Attribut
                                             </figcaption>
@@ -493,7 +493,7 @@
                                         Hier ein Beispiel einer geordneten Liste mit <i class="ilcode">type</i>- und
                                         <i class="ilcode">start</i>-Attribut, und ihre Darstellung: <br> <br>
                                         <figure>
-                                            <img src="./v02a-data/abb_2.4.png" alt="Bild konnte nicht geladen werden"
+                                            <img src="./v02a-data/abb_2.4.PNG" alt="Bild konnte nicht geladen werden"
                                                 width="650" style="border:2px solid black">
                                             <figcaption>Abbildung 2.4 - Eine geordnete Liste mit type- und
                                                 start-Attribut</figcaption>
@@ -513,7 +513,7 @@
                                         Nachfolgend ein Beispiel einer Definitionsliste, und ihre Darstellung in
                                         einem Browser: <br>
                                         <figure>
-                                            <img src="./v02a-data/abb_2.5.png" alt="Bild konnte nicht geladen werden"
+                                            <img src="./v02a-data/abb_2.5.PNG" alt="Bild konnte nicht geladen werden"
                                                 width="650" style="border:2px solid black">
                                             <figcaption>Abbildung 2.5 - Der Quellcode einer Definitionsliste und
                                                 ihre Darstellung</figcaption>
@@ -569,7 +569,7 @@
                                         Beschreibungstext, und die dazugehörige Darstellung in einem Browser:
                                         <br>
                                         <figure>
-                                            <img src="./v02a-data/abb_2.6.png" alt="Bild konnte nicht geladen werden"
+                                            <img src="./v02a-data/abb_2.6.PNG" alt="Bild konnte nicht geladen werden"
                                                 width="650" style="border:2px solid black">
                                             <figcaption>Abbildung 2.6 – Einbindung eines Bildes, mit einem
                                                 Beschreibungstext und Maßangaben [Re19]</figcaption>
@@ -950,7 +950,7 @@
                                 Seite „formularVerarbeitung.php“ weiterleitet. Sowie dessen Darstellung in einem
                                 Browser. <br>
                                 <figure>
-                                    <img src="./v02a-data/abb_3.2.png" alt="Bild konnte nicht geladen werden"
+                                    <img src="./v02a-data/abb_3.2.PNG" alt="Bild konnte nicht geladen werden"
                                         width="650" style="border:2px solid black">
                                     <figcaption>Abbildung 3.2 – Ein Kontaktformular mit Konfiguration zur
                                         Datenübertragung</figcaption>
@@ -1010,7 +1010,7 @@
                                 Nutzer-Registrierung-Formulars, welches einige der bisher erwähnten Elemente
                                 beinhaltet. Sowie dessen Darstellung in einem Browser: <br>
                                 <figure>
-                                    <img src="./v02a-data/abb_3.3.png" alt="Bild konnte nicht geladen werden"
+                                    <img src="./v02a-data/abb_3.3.PNG" alt="Bild konnte nicht geladen werden"
                                         width="650" style="border:2px solid black">
                                     <figcaption>Abbildung 3.3 – Der Quellcode eines Registrierung-Formulars,
                                         sowie dessen Darstellung in einem Browser.</figcaption>
@@ -1106,7 +1106,7 @@
                             Nachdem alle Elemente, ihre Attribute und die logischen Beziehungen in das Modell
                             übertragen wurden, ergibt sich daraus eine Baumstruktur:<br>
                             <figure>
-                                <img src="./v02a-data/abb_4.1.png" alt="Bild konnte nicht geladen werden" width="650"
+                                <img src="./v02a-data/abb_4.1.PNG" alt="Bild konnte nicht geladen werden" width="650"
                                     style="border:2px solid black">
                                 <figcaption>Abbildung 4.1 - Darstellung eines HTML-Dokuments in Baumstruktur;
                                     (vgl. [PH04, Kapitel 2] )</figcaption>
@@ -1253,7 +1253,7 @@
                                 Grafik, und der entsprechende Quellcode: <br>
                             </p>
                             <figure>
-                                <img src="./v02a-data/abb_5.1.png" alt="Bild konnte nicht geladen werden" width="650"
+                                <img src="./v02a-data/abb_5.1.PNG" alt="Bild konnte nicht geladen werden" width="650"
                                     style="border:2px solid black">
                                 <figcaption>Abbildung 5.1 - Eine mittels SVG-Element erzeugte Grafik und der
                                     entsprechende Quellcode</figcaption>
@@ -1277,7 +1277,7 @@
                                 Lautstärkeregelung-Button hinzugefügt. Diesem Attribut muss kein Wert zugewiesen
                                 werden. <br>
                                 <figure>
-                                    <img src="./v02a-data/abb_5.2.png" alt="Bild konnte nicht geladen werden"
+                                    <img src="./v02a-data/abb_5.2.PNG" alt="Bild konnte nicht geladen werden"
                                         width="650" style="border:2px solid black">
                                     <figcaption>Abbildung 5.2 - Der Code und die Darstellung eines eingebundenen
                                         Audio-Elements</figcaption>
@@ -1300,7 +1300,7 @@
                                 <br>
                                 Hier ein Beispiel dazu:<br>
                                 <figure>
-                                    <img src="./v02a-data/abb_5.3.png" alt="Bild konnte nicht geladen werden"
+                                    <img src="./v02a-data/abb_5.3.PNG" alt="Bild konnte nicht geladen werden"
                                         width="650" style="border:2px solid black">
                                     <figcaption>Abbildung 5.3 - Ein durch ein video-Element erzeugter
                                         Videoplayer, für die Datei „video.mp4“</figcaption>
