--- a/datenschutz.html
+++ b/datenschutz.html
@@ -69,7 +69,7 @@
 				bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.
 			</p>
 			<h2>Fragen zum Datenschutz</h2>
-			<p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an
+			<p>Wenn Sie Fragen zum Datenschutz haben, oder ihre Rechte ausüben möchten, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an
 				die
 				für den Datenschutz verantwortliche Person in unserer Organisation:</p>
 			<p>Gregor Haase<br>
