--- a/v02c-javascript.html
+++ b/v02c-javascript.html
@@ -23,7 +23,7 @@
             <ul class="navigation">
                 <li><a href="mainpage.html">Start</a></li>
                 <li><a href="andereseite.html">Server & Client</a></li>
-                <li><a href="">HTML</a></li>
+                <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a id="activetab" href="v02c-javascript.html">JavaScript</a></li>
                 <li><a href="">JSP's/Servlets/JaxB</a></li>
