--- a/mainpage.html
+++ b/mainpage.html
@@ -22,7 +22,7 @@
             <ul class="navigation">
                 <li><a id="activetab" href="mainpage.html">Start</a></li>
                 <li><a href="andereseite.html">Server & Client</a></li>
-                <li><a href="">HTML</a></li>
+                <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
                 <li><a href="">JSP's/Servlets/JaxB </a></li>
@@ -38,38 +38,54 @@
                 <hr>
                 <br>
                 <div class="center-paragraph">
-                    <h4 id="abs1" class="hider"><i class="pfeil-d"></i>Server & Client</h4>
-                    <p>...</p>
+                    <h3 id="abs1" class="thema-h3">Server & Client</h3>
+                    <p>
+                        <a href=""></a>...</p>
                 </div>
+                <hr>
                 <div class="center-paragraph">
-                    <h4 id="abs2" class="hider"><i class="pfeil-d"></i>HTML</h4>
-                    <p>...</p>
-                </div>
-                <div class="center-paragraph">
-                    <h4 id="abs3" class="hider"><i class="pfeil-d"></i>CSS</h4>
+                    <h3 id="abs2" class="thema-h3">HTML</h3>
                     <div class="thema">
-                        <p><img id="css-logo" class="start-logo" src="v02b-data/css3-logo.png" alt="CSS3 Logo" width="15%" />CSS3 wird benutzt um HTML-Dokumente zu stylen. Dieses Skript soll Ihnen die Grundlagen der Benutzung von CSS3 beibringen. Die Abkürzung
-                            CSS steht für Cascading Style Sheets, damit steckt der wichtigste Teil von CSS, die Kaskadierung schon im Namen.</p>
+                        <p>
+                            <a href="v02a-html.html"><img id="html-logo" class="start-logo" src="v02a-data/logo.png" alt="HTML Logo" width="15%" /></a>HTML ist eine Auszeichnungssprache, die zur Erstellung von Inhalten im World Wide Web genutzt wird. Ein HTML-Dokument bildet
+                            die Grundlage einer Website, und legt die Struktur der Inhalte auf der Website fest. In diesem Skript werden ihnen die Grundlagen dieser Sprache erläutert. </p>
                     </div>
                 </div>
+                <hr>
                 <div class="center-paragraph">
-                    <h4 id="abs4" class="hider"><i class="pfeil-d"></i>JavaScript</h4>
+                    <h3 id="abs3" class="thema-h3">CSS</h3>
                     <div class="thema">
-                        <p><img id="js-logo" class="start-logo" src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="15%" /> JavaScript ist für die Entwicklung dynamischer Webseiten unerlässlich. Es ergänzt dabei andere Sprachen wie HTML und
-                            CSS. Dieses Skript soll ein Grundverständnis für die Sprache schaffen.</p>
+                        <p>
+                            <a href="v02b-css.html"><img id="css-logo" class="start-logo" src="v02b-data/css3-logo.png" alt="CSS3 Logo" width="15%" /></a>CSS3 wird benutzt um HTML-Dokumente zu stylen. Dieses Skript soll Ihnen die Grundlagen der Benutzung von CSS3 beibringen.
+                            Die Abkürzung CSS steht für Cascading Style Sheets, damit steckt der wichtigste Teil von CSS, die Kaskadierung schon im Namen.</p>
                     </div>
                 </div>
+                <hr>
                 <div class="center-paragraph">
-                    <h4 id="abs5" class="hider"><i class="pfeil-d"></i>JSP's/Servlets/JaxB</h4>
-                    <p>...</p>
+                    <h3 id="abs4" class="thema-h3">JavaScript</h3>
+                    <div class="thema">
+                        <p>
+                            <a href="v02c-javascript.html"><img id="js-logo" class="start-logo" src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="15%" /></a> JavaScript ist für die Entwicklung dynamischer Webseiten unerlässlich. Es ergänzt dabei andere Sprachen wie HTML
+                            und CSS. Dieses Skript soll ein Grundverständnis für die Sprache schaffen.</p>
+                    </div>
                 </div>
+                <hr>
                 <div class="center-paragraph">
-                    <h4 id="abs6" class="hider"><i class="pfeil-d"></i>PHP</h4>
-                    <p>...</p>
+                    <h3 id="abs5" class="thema-h3">JSP's/Servlets/JaxB</h3>
+                    <p>
+                        <a href=""></a>...</p>
                 </div>
+                <hr>
                 <div class="center-paragraph">
-                    <h4 id="abs7" class="hider"><i class="pfeil-d"></i>NodeJS</h4>
-                    <p>...</p>
+                    <h3 id="abs6" class="thema-h3">PHP</h3>
+                    <p>
+                        <a href=""></a>..</p>
+                </div>
+                <hr>
+                <div class="center-paragraph">
+                    <h3 id="abs7" class="thema-h3">NodeJS</h3>
+                    <p>
+                        <a href=""></a>...</p>
                 </div>
             </div>
             <div class="content-right">
