--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,85 +1,93 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<link href="stylesheet.css" rel="stylesheet" />
-	<link rel="icon" type="image/png" href="hsmalogo.png" />
-	<title>Datenschutzerklärung</title>
+    <meta charset="UTF-8">
+    <link href="stylesheet.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="hsmalogo.png" />
+    <title>Datenschutzerklärung</title>
 </head>
 
 
 
 <body>
-	<div class="header">
-		<div>
-			<p>Gruppe A-5</p>
-			<img src="hsmalogo.png" id="logo">
-			<img src="hsmaschriftzug.png" alt="Hochschule Mannheim" class="schriftzug">
-		</div>
-	</div>
+    <div class="header">
+        <div>
+            <p>Gruppe A-5</p>
+            <img src="hsmalogo.png" id="logo">
+            <img src="hsmaschriftzug.png" alt="Hochschule Mannheim" class="schriftzug">
+        </div>
+    </div>
 
-	<nav>
-		<ul class="navigation">
-			<li><a href="mainpage.html">Start</a></li>
-			<li><a href="andereseite.html">Server & Client</a></li>
-			<li><a href="">HTML</a></li>
-			<li><a href="v02b-css.html">CSS</a></li>
-			<li><a href="v02c-javascript.html">JavaScript</a></li>
-			<li><a href="">JSP's/Servlets/JaxB </a></li>
-			<li><a href="">PHP</a></li>
-			<li><a href="">NodeJS</a></li>
-		</ul>
-	</nav>
+    <nav>
+        <ul class="navigation">
+            <li><a href="mainpage.html">Start</a></li>
+            <li><a href="andereseite.html">Server & Client</a></li>
+            <li><a href="">HTML</a></li>
+            <li><a href="v02b-css.html">CSS</a></li>
+            <li><a href="v02c-javascript.html">JavaScript</a></li>
+            <li><a href="">JSP's/Servlets/JaxB </a></li>
+            <li><a href="">PHP</a></li>
+            <li><a href="">NodeJS</a></li>
+        </ul>
+    </nav>
 
 
-	<div class="content-container">
-		<div class="content-left"></div>
-		<div class="content-center">
-			<h1>Datenschutzerklärung</h1>
-			<p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO),
-				ist:</p>
-			<p>Gregor Haase</p>
-			<h2>Erhobene personenbezogene Daten</h2>
-			Wir erheben und speichern folgende personenbezogene Daten:
-			<ul>
-				<li>Ihre IP Adresse</li>
-			</ul>
-			<h2>Ihre Betroffenenrechte</h2>
-			<p>Unter den angegebenen Kontaktdaten unseres Datenschutzverantwortlichen können Sie jederzeit folgende Rechte
-				ausüben:</p>
-			<ul>
-				<li>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</li>
-				<li>Löschung Ihrer bei uns gespeicherten Daten (Art. 17 DSGVO),</li>
-				<li>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO)</li>
-			</ul>
-			<p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige
-				Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle
-				zuständige
-				Behörde.</p>
-			<p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie unter: <a
-					href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html"
-					target="_blank"
-					rel="nofollow noopener">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.
-			</p>
-			<p></p>
-			<h2>Änderung unserer Datenschutzbestimmungen</h2>
-			<p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen
-				Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen,
-				z.B.
-				bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.
-			</p>
-			<h2>Fragen zum Datenschutz</h2>
-			<p>Wenn Sie Fragen zum Datenschutz haben, oder ihre Rechte ausüben möchten, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an
-				die
-				für den Datenschutz verantwortliche Person in unserer Organisation:</p>
-			<p>Gregor Haase<br>
-				mail@gregor-haase.de</p>
-			<p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a
+    <div class="content-container">
+        <div class="content-left"></div>
+        <div class="content-center">
+            <h1>Datenschutzerklärung:</h1>
+            <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:
+            </p>
+            <p>Gregor Haase<br />Berliner Ring 15<br />68519 Viernheim</p>
+            <p><b>Kontakt</b></p>
+            <p>Telefon: +49 (0) 152424562<br />Telefax: +49-711-9876543<br />E-Mail: mail@gregor-haase.de</p>
+            <h2>Erhobene Daten:</h2>
+            Der Websitebetreiber bzw. Seitenprovider erhebt Daten über Zugriffe auf die Seite und speichert diese als „Server-Logfiles“ ab. Folgende Daten werden so protokolliert:
+            <ul>
+                <li>Besuchte Website</li>
+                <li>Uhrzeit zum Zeitpunkt des Zugriffes</li>
+                <li>Menge der gesendeten Daten in Byte</li>
+                <li>Quelle/Verweis, von welchem Sie auf die Seite gelangten</li>
+                <li>Verwendeter Browser</li>
+                <li>Verwendetes Betriebssystem</li>
+                <li>Verwendete IP-Adresse</li>
+            </ul>
+            Diese Daten werden auf keine Art und Weise weitergegeben oder sonstwie weiterverwendet, sondern dienen nur der Protokollierung von Seitenaufrufen. Im Falle eines Angriffes auf den Server können diese Daten für die Analyse und Abwehr des Angriffes genutzt
+            werden.
+            <h2>Ihre Betroffenenrechte:</h2>
+            <p>Unter den angegebenen Kontaktdaten unseres Datenschutzverantwortlichen können Sie jederzeit folgende Rechte ausüben:
+            </p>
+            <ul>
+                <li>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</li>
+                <li>Löschung Ihrer bei uns gespeicherten Daten (Art. 17 DSGVO),</li>
+                <li>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO)</li>
+            </ul>
+            <p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle zuständige Behörde.
+            </p>
+            <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie unter: <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html" target="_blank" rel="nofollow noopener">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.
+            </p>
+            <p></p>
+            <h2>Änderung unserer Datenschutzbestimmungen:</h2>
+            <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services.
+                Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.
+            </p>
+            <h2>Fragen zum Datenschutz:</h2>
+            <p>Wenn Sie Fragen zum Datenschutz haben, oder ihre Rechte ausüben möchten, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die oben genannte für den Datenschutz verantwortliche Person in unserer Organisation.</p>
+            <p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a
 						href="https://www.activemind.de/datenschutz/datenschutzhinweis-generator/" target="_blank"
 						rel="noopener">externe Datenschutzbeauftragte</a> (Version #2019-04-10).</em></p>
-		</div>
-		<div class="content-right"></div>
-	</div>
+        </div>
+        <div class="content-right"></div>
+    </div>
+    <div class="footer">
+        <div>
+            <nav>
+                <a href="datenschutz.html">Datenschutzbestimmung</a>
+                <br>
+                <a href="impressum.html">Impressum</a>
+            </nav>
+        </div>
+    </div>
 </body>
 
 </html>
