--- a/datenschutz.html
+++ b/datenschutz.html
@@ -25,9 +25,9 @@
 			<li><a href="">HTML</a></li>
 			<li><a href="v02b-css.html">CSS</a></li>
 			<li><a href="v02c-javascript.html">JavaScript</a></li>
-			<li><a href="">JSP's/Servlets/JaxB </a></li>
-			<li><a href="">PHP</a></li>
-			<li><a href="">NodeJS</a></li>
+			<li><a href="v03a.html">JSP's/Servlets/JaxB </a></li>
+			<li><a href="v03b.html">PHP</a></li>
+			<li><a href="v03c.html">NodeJS</a></li>
 		</ul>
 	</nav>
 
@@ -45,7 +45,8 @@
 				<li>Ihre IP Adresse</li>
 			</ul>
 			<h2>Ihre Betroffenenrechte</h2>
-			<p>Unter den angegebenen Kontaktdaten unseres Datenschutzverantwortlichen können Sie jederzeit folgende Rechte
+			<p>Unter den angegebenen Kontaktdaten unseres Datenschutzverantwortlichen können Sie jederzeit folgende
+				Rechte
 				ausüben:</p>
 			<ul>
 				<li>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</li>
@@ -69,7 +70,8 @@
 				bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.
 			</p>
 			<h2>Fragen zum Datenschutz</h2>
-			<p>Wenn Sie Fragen zum Datenschutz haben, oder ihre Rechte ausüben möchten, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an
+			<p>Wenn Sie Fragen zum Datenschutz haben, oder ihre Rechte ausüben möchten, schreiben Sie uns bitte eine
+				E-Mail oder wenden Sie sich direkt an
 				die
 				für den Datenschutz verantwortliche Person in unserer Organisation:</p>
 			<p>Gregor Haase<br>
