--- a/impressum.html
+++ b/impressum.html
@@ -25,9 +25,9 @@
 			<li><a href="">HTML</a></li>
 			<li><a href="v02b-css.html">CSS</a></li>
 			<li><a href="v02c-javascript.html">JavaScript</a></li>
-			<li><a href="">JSP's/Servlets/JaxB </a></li>
-			<li><a href="">PHP</a></li>
-			<li><a href="">NodeJS</a></li>
+			<li><a href="v03a.html">JSP's/Servlets/JaxB </a></li>
+                <li><a href="v03b.html">PHP</a></li>
+                <li><a href="v03c.html">NodeJS</a></li>
 		</ul>
 	</nav>
 
