--- a/v03a.html
+++ b/v03a.html
@@ -39,19 +39,11 @@
                 <hr>
                 <br>
                 <p class="beschreibung">
-                    <img id="chapter-logo"
-                        src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png"
-                        alt="CSS3 Logo" width="15%" /> 
-                        JSPs und Servlets basieren auf Java und haben zum Ziel, Websites 
-                        dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, 
-                        die Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen,
-                        die HTML-Code ausgeben. <br>
-                        JaxB wird benutzt, um Java-Objekte nach XML zu übersetzen und anders herum.
+                    <img id="chapter-logo" src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png" alt="JSP Logo" width="15%" /> JSPs und Servlets basieren auf Java und haben zum Ziel, Websites dynamisch zu erstellen.
+                    JSPs, bzw Java Server Pages, sind HTML Dateien, die Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen, die HTML-Code ausgeben. <br> JaxB wird benutzt, um Java-Objekte nach XML zu übersetzen und anders herum.
                     <br>
                 </p>
-                <a id="skriptlink"
-                    href="https://moodle.hs-mannheim.de/pluginfile.php/184336/mod_resource/content/0/WEB%20-%20V03a%20-%20Backend-Technologien%20im%20Detail%20-%20JSPs-Servlets-JaxB.pdf"
-                    target="_blank">→ JSPs, Servlets, JaxB ←</a>
+                <a id="skriptlink" href="https://moodle.hs-mannheim.de/pluginfile.php/184336/mod_resource/content/0/WEB%20-%20V03a%20-%20Backend-Technologien%20im%20Detail%20-%20JSPs-Servlets-JaxB.pdf" target="_blank">→ JSPs, Servlets, JaxB ←</a>
                 <p class="author">
                     Autor: Prof. Dr. Frank Dopatka
                 </p>
