--- a/v03b.html
+++ b/v03b.html
@@ -39,17 +39,11 @@
                 <hr>
                 <br>
                 <p class="beschreibung">
-                    <img id="chapter-logo"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png"
-                        alt="CSS3 Logo" width="20%" /> 
-                        PHP ist eine Skriptsprache, die verwendet wird, um Websites und Webanwendungen
-                        dynamisch zu erstellen. Erwähnenswert ist die Leichtigkeit, mit der man
-                        mittels PHP Datenbankabfragen machen kann. 
+                    <img id="chapter-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png" alt="PHP Logo" width="20%" /> PHP ist eine Skriptsprache, die verwendet wird, um Websites und Webanwendungen
+                    dynamisch zu erstellen. Erwähnenswert ist die Leichtigkeit, mit der man mittels PHP Datenbankabfragen machen kann.
                     <br>
                 </p>
-                <a id="skriptlink"
-                    href="https://moodle.hs-mannheim.de/pluginfile.php/184337/mod_resource/content/0/WEB%20-%20V03b%20-%20Backend-Technologien%20im%20Detail%20-%20PHP.pdf"
-                    target="_blank">→ PHP ←</a>
+                <a id="skriptlink" href="https://moodle.hs-mannheim.de/pluginfile.php/184337/mod_resource/content/0/WEB%20-%20V03b%20-%20Backend-Technologien%20im%20Detail%20-%20PHP.pdf" target="_blank">→ PHP ←</a>
                 <p class="author">
                     Autor: Prof. Dr. Frank Dopatka
                 </p>
