--- a/v02a-html.html
+++ b/v02a-html.html
@@ -372,7 +372,7 @@
                                         Dieses wird folgendermaßen notiert: <br>
                                         <figure>
                                             <img src="./v02a-data/abb_2.1.PNG" alt="Bild konnte nicht geladen werden"
-                                                style="border:2px solid black">
+                                                style="border:2px solid black" width="85%">
                                             <figcaption>Abbildung 2.1 - Das HTML Grundgerüst</figcaption>
                                         </figure>
                                     </p>
@@ -424,13 +424,14 @@
                                         nennt sich <i>Standalone-Tag</i>. <br> <br>
                                         Als Beispiel finden Sie hier einen HTML-Quellcode und dessen Darstellung in
                                         einem Browser:
+                                        </p>
                                         <figure>
                                             <img src="./v02a-data/abb_2.2.PNG" alt="Bild konnte nicht geladen werden"
-                                                width="650" style="border:2px solid black">
+                                                 width="85%"	style="border:2px solid black">
                                             <figcaption>Abbildung 2.2 – Eine beispielshafte Textstrukturierung
                                             </figcaption>
                                         </figure>
-                                    </p>
+                                    
                                 </div>
                             </div>
 
@@ -463,7 +464,7 @@
                                             class="ilcode">style</i>-Attribut, und ihre Darstellung: <br>
                                         <figure>
                                             <img src="./v02a-data/abb_2.3.PNG" alt="Bild konnte nicht geladen werden"
-                                                width="650" style="border:2px solid black">
+                                                width="85%" style="border:2px solid black">
                                             <figcaption>Abbildung 2.3 – Eine ungeordnete Liste mit style-Attribut
                                             </figcaption>
                                         </figure>
@@ -494,7 +495,7 @@
                                         <i class="ilcode">start</i>-Attribut, und ihre Darstellung: <br> <br>
                                         <figure>
                                             <img src="./v02a-data/abb_2.4.PNG" alt="Bild konnte nicht geladen werden"
-                                                width="650" style="border:2px solid black">
+                                                width="85%" style="border:2px solid black">
                                             <figcaption>Abbildung 2.4 - Eine geordnete Liste mit type- und
                                                 start-Attribut</figcaption>
                                         </figure>
@@ -514,7 +515,7 @@
                                         einem Browser: <br>
                                         <figure>
                                             <img src="./v02a-data/abb_2.5.PNG" alt="Bild konnte nicht geladen werden"
-                                                width="650" style="border:2px solid black">
+                                                width="85%" style="border:2px solid black">
                                             <figcaption>Abbildung 2.5 - Der Quellcode einer Definitionsliste und
                                                 ihre Darstellung</figcaption>
                                         </figure>
@@ -570,7 +571,7 @@
                                         <br>
                                         <figure>
                                             <img src="./v02a-data/abb_2.6.PNG" alt="Bild konnte nicht geladen werden"
-                                                width="650" style="border:2px solid black">
+                                                width="85%" style="border:2px solid black">
                                             <figcaption>Abbildung 2.6 – Einbindung eines Bildes, mit einem
                                                 Beschreibungstext und Maßangaben [Re19]</figcaption>
                                         </figure>
@@ -647,7 +648,7 @@
                                         geöffnet. <br> <br>
                                         <figure>
                                             <img src="./v02a-data/abb_2.7.png" alt="Bild konnte nicht geladen werden"
-                                                width="650" style="border:2px solid black">
+                                                width="85%" style="border:2px solid black">
                                             <figcaption>Abbildung 2.7 - Referenzierung des Dokuments
                                                 „main.html“, durch ein anchor um das eingebundene Bild [Re19]
                                             </figcaption>
@@ -759,7 +760,7 @@
                                     Diese Tabelle wird in einem Browser folgendermaßen dargestellt:
                                     <figure>
                                         <img src="./v02a-data/abb_2.8.png" alt="Bild konnte nicht geladen werden"
-                                            width="450" style="border:2px solid black">
+                                            width="85%" style="border:2px solid black">
                                         <figcaption>Abbildung 2.8 - Die Darstellung einer HTML-Tabelle im
                                             Browser</figcaption>
                                     </figure>
@@ -907,7 +908,7 @@
                             Das nachfolgende Bild zeigt die Darstellung einiger <i class="code">input</i>-types,
                             und den dazugehörigen Code. <br>
                             <figure>
-                                <img src="./v02a-data/abb_3.1.png" alt="Bild konnte nicht geladen werden" width="650"
+                                <img src="./v02a-data/abb_3.1.png" alt="Bild konnte nicht geladen werden" width="90%"
                                     style="border:2px solid black">
                                 <figcaption>Abbildung 3.1 - Die verschiedenen Input-Typen von Formularen
                                 </figcaption>
@@ -951,7 +952,7 @@
                                 Browser. <br>
                                 <figure>
                                     <img src="./v02a-data/abb_3.2.PNG" alt="Bild konnte nicht geladen werden"
-                                        width="650" style="border:2px solid black">
+                                        width="85%" style="border:2px solid black">
                                     <figcaption>Abbildung 3.2 – Ein Kontaktformular mit Konfiguration zur
                                         Datenübertragung</figcaption>
                                 </figure>
@@ -1011,7 +1012,7 @@
                                 beinhaltet. Sowie dessen Darstellung in einem Browser: <br>
                                 <figure>
                                     <img src="./v02a-data/abb_3.3.PNG" alt="Bild konnte nicht geladen werden"
-                                        width="650" style="border:2px solid black">
+                                        width="85%" style="border:2px solid black">
                                     <figcaption>Abbildung 3.3 – Der Quellcode eines Registrierung-Formulars,
                                         sowie dessen Darstellung in einem Browser.</figcaption>
                                 </figure>
@@ -1106,7 +1107,7 @@
                             Nachdem alle Elemente, ihre Attribute und die logischen Beziehungen in das Modell
                             übertragen wurden, ergibt sich daraus eine Baumstruktur:<br>
                             <figure>
-                                <img src="./v02a-data/abb_4.1.PNG" alt="Bild konnte nicht geladen werden" width="650"
+                                <img src="./v02a-data/abb_4.1.PNG" alt="Bild konnte nicht geladen werden" width="85%"
                                     style="border:2px solid black">
                                 <figcaption>Abbildung 4.1 - Darstellung eines HTML-Dokuments in Baumstruktur;
                                     (vgl. [PH04, Kapitel 2] )</figcaption>
@@ -1253,7 +1254,7 @@
                                 Grafik, und der entsprechende Quellcode: <br>
                             </p>
                             <figure>
-                                <img src="./v02a-data/abb_5.1.PNG" alt="Bild konnte nicht geladen werden" width="650"
+                                <img src="./v02a-data/abb_5.1.PNG" alt="Bild konnte nicht geladen werden" width="85%"
                                     style="border:2px solid black">
                                 <figcaption>Abbildung 5.1 - Eine mittels SVG-Element erzeugte Grafik und der
                                     entsprechende Quellcode</figcaption>
@@ -1278,7 +1279,7 @@
                                 werden. <br>
                                 <figure>
                                     <img src="./v02a-data/abb_5.2.PNG" alt="Bild konnte nicht geladen werden"
-                                        width="650" style="border:2px solid black">
+                                        width="85%" style="border:2px solid black">
                                     <figcaption>Abbildung 5.2 - Der Code und die Darstellung eines eingebundenen
                                         Audio-Elements</figcaption>
                                 </figure> <br>
@@ -1301,7 +1302,7 @@
                                 Hier ein Beispiel dazu:<br>
                                 <figure>
                                     <img src="./v02a-data/abb_5.3.PNG" alt="Bild konnte nicht geladen werden"
-                                        width="650" style="border:2px solid black">
+                                        width="85%" style="border:2px solid black">
                                     <figcaption>Abbildung 5.3 - Ein durch ein video-Element erzeugter
                                         Videoplayer, für die Datei „video.mp4“</figcaption>
                                 </figure> <br>
