Revert "Merge branch 'master' of https://github.com/matthesinator/web"
This reverts commit 627a5bf488274a45e0c3c2f39b048a0b6e1ce36f, reversing
changes made to 5a77893e1e4e5e5a1dcfe994488442f560e0e8a1.

--- a/v03c.html
+++ b/v03c.html
@@ -2,7 +2,7 @@
 <html lang="de">
 
 <head>
-    <title>NodeJS</title>
+    <title>CSS3 im Detail</title>
     <meta charset="UTF-8">
     <link href="stylesheet.css" rel="stylesheet" />
     <link href="v02b-data/v02b-style.css" rel="stylesheet" />
@@ -39,11 +39,16 @@
                 <hr>
                 <br>
                 <p class="beschreibung">
-                    <img id="chapter-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png" alt="NodeJS Logo" width="20%" /> NodeJS ist eine serverseitige Plattform zum Betrieb von Netzwerkanwendungen.
-                    Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.
+                    <img id="chapter-logo"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png"
+                        alt="CSS3 Logo" width="20%" /> 
+                        NodeJS ist eine serverseitige Plattform zum Betrieb von Netzwerkanwendungen. 
+                        Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.
                     <br>
                 </p>
-                <a id="skriptlink" href="https://moodle.hs-mannheim.de/pluginfile.php/184336/mod_resource/content/0/WEB%20-%20V03a%20-%20Backend-Technologien%20im%20Detail%20-%20JSPs-Servlets-JaxB.pdf" target="_blank">→ NodeJS ←</a>
+                <a id="skriptlink"
+                    href="https://moodle.hs-mannheim.de/pluginfile.php/184336/mod_resource/content/0/WEB%20-%20V03a%20-%20Backend-Technologien%20im%20Detail%20-%20JSPs-Servlets-JaxB.pdf"
+                    target="_blank">→ NodeJS ←</a>
                 <p class="author">
                     Autor: Prof. Dr. Frank Dopatka
                 </p>
